sample_services/models-service/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/version: 0.0.2
    app.kubernetes.io/name: models-service
  name: models-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.2
      app.kubernetes.io/name: models-service
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: <<unknown>>
      labels:
        app.kubernetes.io/version: 0.0.2
        app.kubernetes.io/name: models-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUOTE_SERVICE
              value: models
          image: demo:latest
          imagePullPolicy: IfNotPresent
          name: models-service
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
