sample_services/models-service/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/name: models-service
    app.kubernetes.io/version: 0.0.2
  name: models-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: models-service
    app.kubernetes.io/version: 0.0.2
  type: ClusterIP
