sample_services/models-service/00_full.yaml
# 
# Load balance Algo: Consistent Hashing
# Hash On: header "x-model-id"
# 
# Deploy demo service pods
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/version: 0.0.2
    app.kubernetes.io/name: models-service
  name: models-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.2
      app.kubernetes.io/name: models-service
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: <<unknown>>
      labels:
        app.kubernetes.io/version: 0.0.2
        app.kubernetes.io/name: models-service
    spec:
      containers:
        - name: models-service
          image: demo:latest
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
---
# Expose demo service pods as service
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
    konghq.com/override: sample-customization
  labels:
    app.kubernetes.io/name: models-service
    app.kubernetes.io/version: 0.0.2
  name: models-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: models-service
    app.kubernetes.io/version: 0.0.2
  type: ClusterIP
---
# Create a route for path with /models/<modelId>
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: models-ingress
  annotations:
    # konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: model-id-transformer
    # konghq.com/plugins: rate-free-tier
spec:
  rules:
    - http:
        paths:
          - path: /models/(?<model_id>[a-z0-9-]+)
            pathType: Prefix
            backend:
              service:
                name: models-service
                port:
                  number: 80
---
# Create a route for path with /models
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: models-ingress-exact
  annotations:
    # konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: model-id-generator
    # konghq.com/plugins: rate-free-tier
spec:
  rules:
    - http:
        paths:
          - path: /models
            pathType: Exact
            backend:
              service:
                name: models-service
                port:
                  number: 80
