sample_services/models-service/03_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: models-ingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    # konghq.com/plugins: rate-free-tier
spec:
  rules:
    - http:
        paths:
          - path: /models
            pathType: Prefix
            backend:
              service:
                name: models-service
                port:
                  number: 80
